--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                 </div>
 
                 <div class="col-sm-4">
-                    <button type="button" class = "btn btn-danger">Clear</button>
+                    <button type="button" class = "btn btn-danger" id = "clear">Clear</button>
                 </div>
 
                 <div class="col-sm-4">
-                    <button type="button" class = "btn btn-success">Export</button>
+                    <button type="button" class = "btn btn-success" id = "export">Export</button>
                 </div>
 
             </div>
